jobs/build-dpdk: add a new dpdk_config
Signed-off-by: Yilong Ren <yilongx.ren@intel.com>
Signed-off-by: Philip Li <philip.li@intel.com>

--- a/jobs/build-dpdk.yaml
+++ b/jobs/build-dpdk.yaml
@@ -8,7 +8,9 @@ commit: v4.0
 
 dpdk_branch:
 dpdk_commit: v2.0.0
-dpdk_config: x86_64-native-linuxapp-gcc
+dpdk_config:
+- x86_64-native-linuxapp-gcc
+- x86_x32-native-linuxapp-gcc
 dpdk_compiler:
 - gcc-4.9
 - gcc-5
