build-dpdk: add gcc-5 support
Signed-off-by: Yilong Ren <yilongx.ren@intel.com>
Signed-off-by: Philip Li <philip.li@intel.com>

--- a/jobs/build-dpdk.yaml
+++ b/jobs/build-dpdk.yaml
@@ -9,6 +9,8 @@ commit: v4.0
 dpdk_branch:
 dpdk_commit: v2.0.0
 dpdk_config: x86_64-native-linuxapp-gcc
-dpdk_compiler: gcc-4.9
+dpdk_compiler:
+- gcc-4.9
+- gcc-5
 
 build-dpdk:
