--- a/jobs/build-dpdk.yaml
+++ b/jobs/build-dpdk.yaml
@@ -6,7 +6,7 @@ testbox: vm-lkp-wsx03-4G
 branch: linus/master
 commit: v4.0
 
-dpdk_branch:
+dpdk_branch: master
 dpdk_commit: v2.0.0
 dpdk_config:
 - x86_64-native-linuxapp-gcc
