build-dpdk: fix wrong branch name
To fix the following error info:
------------------------------------------------
fatal: remote error: no such repository: /master
fatal: remote error: no such repository: /master
fatal: remote error: no such repository: /master
------------------------------------------------

Signed-off-by: Yilong Ren <yilongx.ren@intel.com>
Signed-off-by: Philip Li <philip.li@intel.com>

--- a/jobs/build-dpdk.yaml
+++ b/jobs/build-dpdk.yaml
@@ -6,7 +6,7 @@ testbox: vm-lkp-wsx03-4G
 branch: linus/master
 commit: v4.0
 
-dpdk_branch: master
+dpdk_branch: dpdk/master
 dpdk_commit: v2.0.0
 dpdk_config:
 - x86_64-native-linuxapp-gcc
